v0.2.26 (05/20/2024) :
    - Implemented gfx grouping based on prefix
    - Bug fix in const unsigned int arrays generation

v0.2.25 (04/12/2024) :
    - Added noholeydma keyword supprt 
    - Corrected a bug with included assembler (oops)

v0.2.24 (03/26/2024) :
    - Added support for height 12 scattered memory

v0.2.23 (03/12/2024) :
    - Added paddles support in header
    - Enhanced memory mapping

v0.2.22 (02/12/2024) :
    - Bug corrected in constant adresses in array of pointers
    - Bug corrected wrt sign region size

v0.2.21 (01/17/2024) :
    - Added support for 8KB, 16KB, 32KB and 48KB ROMs  
    - Added support for 52KB ROMs
    - Moved startup code to the end of the first bank (just before interrupt vectors)
    - Reserved ROM for cart encryption signature
    - Always hash the last 4KB
     
v0.2.20 (01/08/2024) :
    - Added support for constant address in array of pointers
     
v0.2.19 (12/22/2023) :
    - Moved to cc6502 v1.0.14

v0.2.18 (12/04/2023) :
    - Moved to cc6502 v1.0.13
    - Added support for correct state save on interrupt
    - Added error on zeropage variables overflow

v0.2.17 (11/08/2023) :
    - Moved to cc6502 v1.0.12
    - Enhanced function level computation (too slow when recursion is found)
    - Corrected zeropage variable usage count

v0.2.16 (10/26/2023) :
    - Moved to cc6502 v1.0.10

v0.2.15 (10/09/2023) :
    - Moved to cc6502 v1.0.9

v0.2.14 (10/02/2023) :
    - Bug corrected: current_bank is set correctly (bankswitching)
    - Added generation of asm in banked rom
    - Added interrupt tree call local variables declaration 
    - Added memory full message

v0.2.13 (09/17/2023) :
    - Better supergame detection (no need to have function code in banks)

v0.2.12 (09/04/2023) :
    - Added small and big sprites in multisprite.h
    - Added example_small_sprites and example_explosions
    - Moved to cc6502 v1.0.3

v0.2.11 (08/28/2023) :
    - Corrected some bugs in conio.h
    - Added holeydmacost.c example